; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/davinci/extr_psc.c_best_dev_name.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/davinci/extr_psc.c_best_dev_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"compatible\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.device*)* @best_dev_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @best_dev_name(%struct.device* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.device*, align 8
  %4 = alloca i8*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  %5 = load %struct.device*, %struct.device** %3, align 8
  %6 = getelementptr inbounds %struct.device, %struct.device* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @of_property_read_string(i32 %7, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8** %4)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = load i8*, i8** %4, align 8
  store i8* %11, i8** %2, align 8
  br label %15

12:                                               ; preds = %1
  %13 = load %struct.device*, %struct.device** %3, align 8
  %14 = call i8* @dev_name(%struct.device* %13)
  store i8* %14, i8** %2, align 8
  br label %15

15:                                               ; preds = %12, %10
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}

declare dso_local i32 @of_property_read_string(i32, i8*, i8**) #1

declare dso_local i8* @dev_name(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
